# AdaptiveGEMM

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  baseline_ncu.txt  ncu_phase24_tiled.csv  ncu_phase28_summary.csv
.github/workflows/: ci.yml  smoke.yml
docs/: 31_Phase24_26_Performance_Tuning_and_Occupancy.md
examples/: demo_main.cpp
include/: AdaptiveOzaki.h
scripts/: setup_ubuntu_gpu_runner.sh
src/: AdaptiveOzaki.cu  pybind_module.cpp
submission/: COSCUP2026.md
tests/: precision_test.cpp  test_pybind.py
tests/python/: test_api.py  test_class_api.py
